--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "financial-loan-calculator-engine",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Financial Loan Calculator Engine",
   "author": {
     "name": "Pablo De Nadai",
@@ -10,7 +10,8 @@
   "repository": "financial-calcs/loan-calculator-engine",
   "license": "MIT",
   "files": [
-    "index.js"
+    "index.js",
+    "operators"
   ],
   "keywords": [
     "financial",
@@ -33,7 +34,7 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "scripts": {
-    "test": "grunt",
+    "test": "gulp mocha",
     "browser": "browserify index.js > browser.js"
   }
 }
