add `browserify` keyword to `package.json`

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "financial",
     "loan",
     "calculator",
-    "engine"
+    "engine",
+    "browserify"
   ],
   "dependencies": {
     "lodash": "^2.4.1",
