--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - '0.10'
 deploy:
   provider: npm
+  email: "pablodenadai@gmail.com"
   api_key:
     secure: mga76KTwEGu0UfU1TcIobxUVdTgFR5//HBkEbkIm8uU4aSX1JkH7/6VmaMnr/gwvlfk65k0OUnoXlSIDYuYa70zbzTQBUqX+d8fxhtjobkwEZvwW2wXso2qAIiF5WEpjbjCBdxeparv5+l9CS9Oly5BYqwq5QNF/bsehMJax6z8=
   on:
