Update calculator-engine dep

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "browserify"
   ],
   "dependencies": {
-    "lodash": "^3.0.0",
-    "financial-calculator-engine": "~1.0.2"
+    "financial-calculator-engine": "file:../../../../../../../var/folders/r7/0z_br2810pb5mh9nwr893ywr0000gn/T/npm-90590-96615e31/1437481822729-0.652940379222855/e474a4b084026b7f2d0245b6bb61ce133db34e71",
+    "lodash": "^3.0.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
@@ -43,6 +43,8 @@
     "lodash": "global:_"
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   }
 }
